Cambio para procesar swissprot en batch mode